@@ -144,6 +144,15 @@ enum c_visit_dir {
 ///////////////////////////////////////////////////////////////////////////////
 
 /**
+ * Type of optional data passed to c_ast_visit().
+ *
+ * @note This is `uint64_t` so it can hold either the largest possible integer
+ * or a pointer.  It is _not_ `uintptr_t` because that can't hold a 64-bit
+ * integer on a 32-bit pointer platform.
+ */
+typedef uint64_t c_ast_visitor_data_t;
+
+/**
  * The signature for functions passed to c_ast_visit().
  *
  * @param ast The AST to visit.
@@ -151,7 +160,7 @@ enum c_visit_dir {
  * @return Returning `true` will cause traversal to stop and \a ast to be
  * returned to the caller of c_ast_visit().
  */
-typedef bool (*c_ast_visitor_t)( c_ast_t *ast, uint64_t data );
+typedef bool (*c_ast_visitor_t)( c_ast_t *ast, c_ast_visitor_data_t data );
 
 /**
  * @defgroup ast-nodes-group AST Nodes
@@ -788,7 +797,7 @@ void c_ast_set_sname( c_ast_t *ast, c_sname_t *sname );
  */
 PJL_NOWARN_UNUSED_RESULT
 c_ast_t* c_ast_visit( c_ast_t *ast, c_visit_dir_t dir, c_ast_visitor_t visitor,
-                      uint64_t data );
+                      c_ast_visitor_data_t data );
 
 /**
  * Convenience function to get the AST given a `c_ast_param_t`.
