@@ -453,7 +453,7 @@ static c_type_t c_ast_take_storage( c_ast_t *ast ) {
  * @return Returns `true` only if the kind of \a ast is one of the kinds.
  */
 PJL_WARN_UNUSED_RESULT
-static bool c_ast_vistor_kind_any( c_ast_t *ast, uint64_t data ) {
+static bool c_ast_vistor_kind_any( c_ast_t *ast, c_ast_visitor_data_t data ) {
   assert( ast != NULL );
   c_ast_kind_t const kinds = STATIC_CAST( c_ast_kind_t, data );
   return c_ast_is_kind_any( ast, kinds );
@@ -467,7 +467,7 @@ static bool c_ast_vistor_kind_any( c_ast_t *ast, uint64_t data ) {
  * @return Returns `true` only if \a ast has such a scoped name.
  */
 PJL_WARN_UNUSED_RESULT
-static bool c_ast_visitor_name( c_ast_t *ast, uint64_t data ) {
+static bool c_ast_visitor_name( c_ast_t *ast, c_ast_visitor_data_t data ) {
   assert( ast != NULL );
   (void)data;
   return !c_ast_name_empty( ast );
@@ -482,7 +482,7 @@ static bool c_ast_visitor_name( c_ast_t *ast, uint64_t data ) {
  * @return Returns `true` only if the type of \a ast is one of the types.
  */
 PJL_WARN_UNUSED_RESULT
-static bool c_ast_vistor_type_any( c_ast_t *ast, uint64_t data ) {
+static bool c_ast_vistor_type_any( c_ast_t *ast, c_ast_visitor_data_t data ) {
   assert( ast != NULL );
   c_type_t const *const type = REINTERPRET_CAST( c_type_t*, data );
   return c_type_is_any( &ast->type, type );
@@ -514,7 +514,7 @@ c_ast_t* c_ast_add_func( c_ast_t *ast, c_ast_t *ret_ast, c_ast_t *func_ast ) {
 c_ast_t* c_ast_find_kind_any( c_ast_t *ast, c_visit_dir_t dir,
                               c_ast_kind_t kinds ) {
   assert( kinds != 0 );
-  uint64_t const data = STATIC_CAST( uint64_t, kinds );
+  c_ast_visitor_data_t const data = STATIC_CAST( c_ast_visitor_data_t, kinds );
   return c_ast_visit( ast, dir, c_ast_vistor_kind_any, data );
 }
 
@@ -526,7 +526,8 @@ c_sname_t* c_ast_find_name( c_ast_t const *ast, c_visit_dir_t dir ) {
 
 c_ast_t* c_ast_find_type_any( c_ast_t *ast, c_visit_dir_t dir,
                               c_type_t const *type ) {
-  uint64_t const data = REINTERPRET_CAST( uint64_t, type );
+  c_ast_visitor_data_t const data =
+    REINTERPRET_CAST( c_ast_visitor_data_t, type );
   return c_ast_visit( ast, dir, c_ast_vistor_type_any, data );
 }
 
