@@ -1,0 +1,1 @@
+declare p as pointer to V
