@@ -1,0 +1,1 @@
+cdecl @ @ @ typedef void V; explain V *p @ 0
